[package]
name = "xeca"
version = "0.3.1"
authors = ["postrequest"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
base64 = "0.12"
block-modes = "0.8"
byteorder = "1.3"
clap = "2.33"
hex-literal = "0.2"
rand = "0.5"
